<resources>
    <string name="app_name">Quiz App</string>
    <string name="title">Donald Trump</string>
    <string name="subtitle">Make America Great Again</string>
    <string name="getting_ready">Are you ready?</string>
    <string name="your_name">Enter your name</string>
    <string name="wife_name">Enter her name</string>
    <string name="Question1">Q1) How many kids does Donald Trump have?</string>
    <string name="Question1_option1">4</string>
    <string name="Question1_option2">6</string>
    <string name="Question1_option3">5</string>
    <string name="Question1_option4">3</string>
    <string name="Question2">Q2) What is the name of his third wife?</string>
    <string name="Question3">Q3) Choose the names of the kids of Donald Trump from his first wife</string>
    <string name="Question3_option1">Donald Trump Jr.</string>
    <string name="Question3_option2">Tiffany Trump</string>
    <string name="Question3_option3">Ivanka Trump</string>
    <string name="Question3_option4">Eric Trump</string>
    <string name="Question4">Q4) Who is the president of the united states of America?</string>
    <string name="Question4_option1">Bill Clinton</string>
    <string name="Question4_option2">Barak Obama</string>
    <string name="Question4_option3">Donald Trump</string>
    <string name="Question4_option4">Hillary Clinton</string>
    <string name="Submit">Submit</string>

</resources>
